# jimp_exercises

academiascheduler/: CMakeLists.txt  Scheduler.cpp  Scheduler.h
lab1/doublebasepalindrome/: CMakeLists.txt  DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: Factorial.cpp  Factorial.h
lab1/palindrome/: CMakeLists.txt  Palindrome.cpp  Palindrome.h  main.cpp
lab12/: CMakeLists.txt  Tree.h  TreeIterators.h  main.cpp
lab12/academiasequentialgenerator/: CMakeLists.txt  SequentialGenerator.h  main.cpp
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h  main.cpp
lab12/tree/: CMake.txt  Tree.cpp  TreeIterators.cpp
lab2/array2d/: Array2D.cpp  Array2D.h  main.cpp
lab2/greatestproduct/: GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h  main.cpp  plik-szyfr.txt  plik-tekst.txt
lab2/xorcypherbreaker/: XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/ccounter/: CCounter.cpp  CCounter.h  CMakeLists.txt  main.cpp
lab3/minimaltimedifference/: CMakeLists.txt  MinimalTimeDifference.cpp  MinimalTimeDifference.h  main.cpp
lab3/smarttree/: SmartTree.cpp  SmartTree.h  main.cpp
lab3/tinyurl/: TinyUrl.cpp  TinyUrl.h  main.cpp
lab4/: CMakeLists.txt
lab4/modelnames/: CMakeLists.txt  Name.cpp  Name.h  main.cpp
lab7/iterable/: CMakeLists.txt  Iterable.cpp  Iterable.h  IterableIterator.cpp  IterableIterator.h  IterableIteratorWrapper.cpp  IterableIteratorWrapper.h  main.cpp
(+29 files in other folders)
